Fixes attachment alignment issue for >4 attachments

--- a/app/assets/stylesheets/tile/tile_fullsize/_attachments.css.scss
+++ b/app/assets/stylesheets/tile/tile_fullsize/_attachments.css.scss
@@ -19,10 +19,11 @@
   color: #33445c;
   margin-bottom: 5px;
   margin-right: 10px;
+  margin-left: 10px;
 }
 
-.tile-attachment:not(:first-of-type) {
-  margin-left: 10px;
+.tile-attachment:nth-child(4n+1) {
+  margin-left: 0px;
 }
 
 .tile-attachment a{
